adding a countdown timer

--- a/Main.html
+++ b/Main.html
@@ -17,6 +17,8 @@
     
     <button id="button">Feed Pepper</button>
     <p id="counter">0</p>
+    <span id="countdown"></span>
+    <span id="message"></span>
     <script src="magic.js"> </script>
 
     
