Added a password form to enter

--- a/Main.html
+++ b/Main.html
@@ -12,7 +12,14 @@
 
 </head>
 <body>
- <div class="container">   
+    <form id ="passwordForm">
+        <label id= "enter"for="password">Enter password:</label><br>
+        <input type="password" id="password" name="password"><br>
+        <button type="submit" >Submit</button>
+    </form>
+ 
+ 
+<div class="container" style="display: none;" id="mainContent">   
     <div><h1>What are you waiting for?</h1></div>
     <div><button id="button">Feed Pepper</button></div>
     <div><p id="counter">0</p></div>    
