--- a/Main.html
+++ b/Main.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <form id ="passwordForm">
-        <label id= "enter"for="password">Enter password:</label><br>
-        <input type="password" id="password" name="password"><br>
-        <button type="submit" >Submit</button>
+        <div><label id= "enter"for="password">Enter password:</label></div><br>
+        <div><input type="password" id="password" name="password"></div><br>
+        <div><button type="submit" >Submit</button></div>
     </form>
  
  
