--- a/Main.html
+++ b/Main.html
@@ -15,17 +15,17 @@
     <form id ="passwordForm">
         <div><label id= "enter"for="password">Enter password:</label></div><br>
         <div><input type="password" id="password" name="password"></div><br>
-        <div><button type="submit" >Submit</button></div>
+        <div><button onclick="myFunction()"type="submit" >Submit</button></div>
     </form>
     
 
  
  
 <div class="container" style="display: none;" id="mainContent">   
-    <div><h1>What are you waiting for?</h1></div>
+    <div><h1></h1></div>
     <div><button id="button">Feed Pepper</button></div>
     <div><p id="counter">0</p></div>    
-    <div id="message">Shall we feed her?</div>
+    <div id="message"></div>
     <div id="picture-container"><img src="picture.jpg" id="picture"></div>
     <script src="magic.js"> </script>
 </div>
